// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should be rendered correctly 1`] = `
<label
  className="container switch-vars root size-18 uui-theme-loveship -clickable"
>
  <div
    className="uui-switch-body"
  >
    <input
      aria-checked={false}
      checked={false}
      onChange={[Function]}
      role="switch"
      type="checkbox"
    />
    <div
      className="uui-switch-toggler"
    />
  </div>
</label>
`;

exports[`Switch should be rendered correctly with new props 1`] = `
<label
  className="container switch-vars root size-12 uui-theme-loveship -clickable"
>
  <div
    className="uui-switch-body"
  >
    <input
      aria-checked={false}
      checked={false}
      onChange={[Function]}
      role="switch"
      type="checkbox"
    />
    <div
      className="uui-switch-toggler"
    />
  </div>
  <div
    className="uui-input-label"
  >
    Open
  </div>
</label>
`;
